deploy: 63642cdbac9dc8b23d6d1ba44f288683c2452da7

--- a/CyclotomicPolynomial.html
+++ b/CyclotomicPolynomial.html
@@ -13,14 +13,15 @@
 <!--  l. 1  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://e.math.cornell.edu/people/belk/numbertheory/CyclotomicPolynomials.pdf'>Fields and Cyclotomic Polynomials</a> <span class='cite'>[<a href='refname.html#Xcyclotomic-polynomial'>1</a>]</span>
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-8.1 <a href='Definitions4.html#definitions4'>Definitions</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-8.1 <a href='Definitions4.html#definitions4'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-8.2 <a href='Theorems3.html#theorems3'>Theorems</a></span>
    </div>
+<!--  l. 4  --><p class='indent'>   
 
                                                                                          
                                                                                          
-   <!--  l. 415  --><div class='crosslinks'><p class='noindent'>[<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>next</a>] [<a href='RootsofUnity.html'>prev</a>] [<a href='RootsofUnity.html#tailRootsofUnity.html'>prev-tail</a>] [<a href='CyclotomicPolynomial.html'>front</a>] [<a href='BasicMath.html#CyclotomicPolynomial.html'>up</a>] </p></div>
+   <!--  l. 415  --></p><div class='crosslinks'><p class='noindent'>[<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>next</a>] [<a href='RootsofUnity.html'>prev</a>] [<a href='RootsofUnity.html#tailRootsofUnity.html'>prev-tail</a>] [<a href='CyclotomicPolynomial.html'>front</a>] [<a href='BasicMath.html#CyclotomicPolynomial.html'>up</a>] </p></div>
 <!--  l. 415  --><p class='indent'>   <a id='tailCyclotomicPolynomial.html'></a> </p> 
 </body> 
 </html>
