--- a/Decomposition.html
+++ b/Decomposition.html
@@ -15,8 +15,8 @@ expressing the same value in a smaller base. This section will explain number de
 polynomial decomposition.
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-6.1 <a href='NumberDecomposition.html#number-decomposition'>Number Decomposition</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-6.1 <a href='NumberDecomposition.html#number-decomposition'>Number Decomposition</a></span>
 <br />   <span class='subsubsectionToc'>A-6.1.1 <a href='NumberDecomposition.html#example2'>Example</a></span>
 <br />   <span class='subsectionToc'>A-6.2 <a href='PolynomialDecomposition.html#polynomial-decomposition'>Polynomial Decomposition</a></span>
 <br />   <span class='subsubsectionToc'>A-6.2.1 <a href='PolynomialDecomposition.html#example3'>Example</a></span>
@@ -24,12 +24,13 @@ polynomial decomposition.
 <br />   <span class='subsectionToc'>A-6.3 <a href='ApproximateDecomposition.html#approximate-decomposition'>Approximate Decomposition</a></span>
 <br />   <span class='subsectionToc'>A-6.4 <a href='GadgetDecomposition.html#gadget-decomposition'>Gadget Decomposition</a></span>
    </div>
+<!--  l. 3  --><p class='indent'>   
 
 
 
                                                                                          
                                                                                          
-   <!--  l. 403  --><div class='crosslinks'><p class='noindent'>[<a href='RootsofUnity.html'>next</a>] [<a href='PolynomialRing.html'>prev</a>] [<a href='PolynomialRing.html#tailPolynomialRing.html'>prev-tail</a>] [<a href='Decomposition.html'>front</a>] [<a href='BasicMath.html#Decomposition.html'>up</a>] </p></div>
+   <!--  l. 403  --></p><div class='crosslinks'><p class='noindent'>[<a href='RootsofUnity.html'>next</a>] [<a href='PolynomialRing.html'>prev</a>] [<a href='PolynomialRing.html#tailPolynomialRing.html'>prev-tail</a>] [<a href='Decomposition.html'>front</a>] [<a href='BasicMath.html#Decomposition.html'>up</a>] </p></div>
 <!--  l. 403  --><p class='indent'>   <a id='tailDecomposition.html'></a> </p> 
 </body> 
 </html>
