--- a/EulersFormula.html
+++ b/EulersFormula.html
@@ -11,18 +11,19 @@
    <!--  l. 427  --><div class='crosslinks'><p class='noindent'>[<a href='ModuloRescaling.html'>next</a>] [<a href='VectorandMatrix.html'>prev</a>] [<a href='VectorandMatrix.html#tailVectorandMatrix.html'>prev-tail</a>] [<a href='#tailEulersFormula.html'>tail</a>] [<a href='BasicMath.html#EulersFormula.html'>up</a>] </p></div>
    <h3 class='sectionHead' id='eulers-formula'><span class='titlemark'>A-11   </span> <a id='x43-55000A-11'></a>Euler’s Formula</h3>
    
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-11.1 <a href='PythagoreanIdentity.html#pythagorean-identity'>Pythagorean Identity</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-11.1 <a href='PythagoreanIdentity.html#pythagorean-identity'>Pythagorean Identity</a></span>
 <br />   <span class='subsectionToc'>A-11.2 <a href='ImaginaryNumber.html#imaginary-number'>Imaginary Number</a></span>
 <br />   <span class='subsectionToc'>A-11.3 <a href='EulersFormula1.html#eulers-formula1'>Euler’s Formula</a></span>
 <br />   <span class='subsectionToc'>A-11.4 <a href='VandermondeMatrixwithRootsofCyclotomicPolynomial.html#vandermonde-matrix-with-roots-of-cyclotomic-polynomial'>Vandermonde Matrix with Roots of Cyclotomic Polynomial</a></span>
    </div>
+<!--  l. 2  --><p class='indent'>   
 
 
 
                                                                                          
                                                                                          
-   <!--  l. 433  --><div class='crosslinks'><p class='noindent'>[<a href='ModuloRescaling.html'>next</a>] [<a href='VectorandMatrix.html'>prev</a>] [<a href='VectorandMatrix.html#tailVectorandMatrix.html'>prev-tail</a>] [<a href='EulersFormula.html'>front</a>] [<a href='BasicMath.html#EulersFormula.html'>up</a>] </p></div>
+   <!--  l. 433  --></p><div class='crosslinks'><p class='noindent'>[<a href='ModuloRescaling.html'>next</a>] [<a href='VectorandMatrix.html'>prev</a>] [<a href='VectorandMatrix.html#tailVectorandMatrix.html'>prev-tail</a>] [<a href='EulersFormula.html'>front</a>] [<a href='BasicMath.html#EulersFormula.html'>up</a>] </p></div>
 <!--  l. 433  --><p class='indent'>   <a id='tailEulersFormula.html'></a> </p> 
 </body> 
 </html>
