--- a/GLWECiphertexttoPlaintextAddition.html
+++ b/GLWECiphertexttoPlaintextAddition.html
@@ -60,9 +60,11 @@ as adding two original plaintexts.
  □</p></div>
    </dd></dl>
    
-   <div class='subsubsectionTOCS'>
-   <span class='subsubsectionToc'>C-2.0.1 <a href='#discussion4'>Discussion</a></span>
+   <div class='subsubsectionTOCS hrr'>
+<br />   <span class='subsubsectionToc'>C-2.0.1 <a href='#discussion4'>Discussion</a></span>
    </div>
+<!--  l. 55  --><p class='indent'>   
+</p>
    <h5 class='subsubsectionHead' id='discussion4'><span class='titlemark'>C-2.0.1   </span> <a id='x88-107000C-2.0.1'></a>Discussion</h5>
 <!--  l. 57  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Noise Growth:  </span>Note that after decryption, the original ciphertext
 <!--  l. 57  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>C</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi mathvariant='normal'>Λ</mi></mrow></math>’s noise
