--- a/GLWECryptosystem.html
+++ b/GLWECryptosystem.html
@@ -31,21 +31,22 @@ of <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/Math
 simplicity.
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>B-4.1 <a href='Setup2.html#setup2'>Setup</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>B-4.1 <a href='Setup2.html#setup2'>Setup</a></span>
 <br />   <span class='subsectionToc'>B-4.2 <a href='Encryption2.html#encryption2'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-4.3 <a href='Decryption2.html#decryption2'>Decryption</a></span>
 <br />   <span class='subsubsectionToc'>B-4.3.1 <a href='Decryption2.html#discussion2'>Discussion</a></span>
 <br />   <span class='subsectionToc'>B-4.4 <a href='AnAlternativeVersionofGLWE.html#an-alternative-version-of-glwe'>An Alternative Version of GLWE</a></span>
 <br />   <span class='subsectionToc'>B-4.5 <a href='PublicKeyEncryption.html#public-key-encryption'>Public Key Encryption</a></span>
    </div>
+<!--  l. 6  --><p class='indent'>   
 
 
 
 
                                                                                          
                                                                                          
-   <!--  l. 524  --><div class='crosslinks'><p class='noindent'>[<a href='GLev.html'>next</a>] [<a href='RLWECryptosystem1.html'>prev</a>] [<a href='RLWECryptosystem1.html#tailRLWECryptosystem1.html'>prev-tail</a>] [<a href='GLWECryptosystem.html'>front</a>] [<a href='PostquantumCryptography.html#GLWECryptosystem.html'>up</a>] </p></div>
+   <!--  l. 524  --></p><div class='crosslinks'><p class='noindent'>[<a href='GLev.html'>next</a>] [<a href='RLWECryptosystem1.html'>prev</a>] [<a href='RLWECryptosystem1.html#tailRLWECryptosystem1.html'>prev-tail</a>] [<a href='GLWECryptosystem.html'>front</a>] [<a href='PostquantumCryptography.html#GLWECryptosystem.html'>up</a>] </p></div>
 <!--  l. 524  --><p class='indent'>   <a id='tailGLWECryptosystem.html'></a> </p> 
 </body> 
 </html>
