--- a/LWECryptosystem1.html
+++ b/LWECryptosystem1.html
@@ -14,19 +14,20 @@
 </p><!--  l. 7  --><p class='indent'>   <!--  l. 7  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>B-2.1 <a href='Setup.html#setup'>Setup</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>B-2.1 <a href='Setup.html#setup'>Setup</a></span>
 <br />   <span class='subsectionToc'>B-2.2 <a href='Encryption.html#encryption'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-2.3 <a href='Decryption.html#decryption'>Decryption</a></span>
 <br />   <span class='subsubsectionToc'>B-2.3.1               <a href='Decryption.html#in-the-case-of-t-not-dividing-q'>In               the               Case               of
 <!--  l. 95  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> not
 Dividing <!--  l. 95  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math></a></span>
    </div>
+<!--  l. 12  --><p class='indent'>   
 
 
                                                                                          
                                                                                          
-   <!--  l. 512  --><div class='crosslinks'><p class='noindent'>[<a href='RLWECryptosystem1.html'>next</a>] [<a href='LatticebasedCryptography.html'>prev</a>] [<a href='LatticebasedCryptography.html#tailLatticebasedCryptography.html'>prev-tail</a>] [<a href='LWECryptosystem1.html'>front</a>] [<a href='PostquantumCryptography.html#LWECryptosystem1.html'>up</a>] </p></div>
+   <!--  l. 512  --></p><div class='crosslinks'><p class='noindent'>[<a href='RLWECryptosystem1.html'>next</a>] [<a href='LatticebasedCryptography.html'>prev</a>] [<a href='LatticebasedCryptography.html#tailLatticebasedCryptography.html'>prev-tail</a>] [<a href='LWECryptosystem1.html'>front</a>] [<a href='PostquantumCryptography.html#LWECryptosystem1.html'>up</a>] </p></div>
 <!--  l. 512  --><p class='indent'>   <a id='tailLWECryptosystem1.html'></a> </p> 
 </body> 
 </html>
