--- a/ModuloArithmetic.html
+++ b/ModuloArithmetic.html
@@ -14,17 +14,18 @@
 </p><!--  l. 4  --><p class='indent'>    <a href='https://www.youtube.com/watch?v=fz1vxq5ts5I'>YouTube – Extended Euclidean Algorithm Tutorial</a>
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-1.1 <a href='Overview.html#overview'>Overview</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-1.1 <a href='Overview.html#overview'>Overview</a></span>
 <br />   <span class='subsectionToc'>A-1.2 <a href='ModuloArithmetic1.html#modulo-arithmetic1'>Modulo Arithmetic</a></span>
 <br />   <span class='subsubsectionToc'>A-1.2.1 <a href='ModuloArithmetic1.html#inverse'>Inverse</a></span>
 <br />   <span class='subsubsectionToc'>A-1.2.2 <a href='ModuloArithmetic1.html#modulo-division'>Modulo Division</a></span>
 <br />   <span class='subsubsectionToc'>A-1.2.3 <a href='ModuloArithmetic1.html#centered-residue-representation'>Centered Residue Representation</a></span>
    </div>
+<!--  l. 7  --><p class='indent'>   
 
                                                                                          
                                                                                          
-   <!--  l. 369  --><div class='crosslinks'><p class='noindent'>[<a href='Group.html'>next</a>] [<a href='ModuloArithmetic.html'>front</a>] [<a href='BasicMath.html#ModuloArithmetic.html'>up</a>] </p></div>
+   <!--  l. 369  --></p><div class='crosslinks'><p class='noindent'>[<a href='Group.html'>next</a>] [<a href='ModuloArithmetic.html'>front</a>] [<a href='BasicMath.html#ModuloArithmetic.html'>up</a>] </p></div>
 <!--  l. 369  --><p class='indent'>   <a id='tailModuloArithmetic.html'></a> </p> 
 </body> 
 </html>
