--- a/Order.html
+++ b/Order.html
@@ -13,14 +13,15 @@
 <!--  l. 1  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://e.math.cornell.edu/people/belk/numbertheory/CyclotomicPolynomials.pdf'>Fields and Cyclotomic Polynomials</a> <span class='cite'>[<a href='refname.html#Xcyclotomic-polynomial'>1</a>]</span>
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-4.1 <a href='Definitions2.html#definitions2'>Definitions</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-4.1 <a href='Definitions2.html#definitions2'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-4.2 <a href='Theorems1.html#theorems1'>Theorems</a></span>
    </div>
+<!--  l. 4  --><p class='indent'>   
 
                                                                                          
                                                                                          
-   <!--  l. 390  --><div class='crosslinks'><p class='noindent'>[<a href='PolynomialRing.html'>next</a>] [<a href='Field.html'>prev</a>] [<a href='Field.html#tailField.html'>prev-tail</a>] [<a href='Order.html'>front</a>] [<a href='BasicMath.html#Order.html'>up</a>] </p></div>
+   <!--  l. 390  --></p><div class='crosslinks'><p class='noindent'>[<a href='PolynomialRing.html'>next</a>] [<a href='Field.html'>prev</a>] [<a href='Field.html#tailField.html'>prev-tail</a>] [<a href='Order.html'>front</a>] [<a href='BasicMath.html#Order.html'>up</a>] </p></div>
 <!--  l. 390  --><p class='indent'>   <a id='tailOrder.html'></a> </p> 
 </body> 
 </html>
