--- a/RootsofUnity.html
+++ b/RootsofUnity.html
@@ -13,14 +13,15 @@
 <!--  l. 1  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://e.math.cornell.edu/people/belk/numbertheory/CyclotomicPolynomials.pdf'>Fields and Cyclotomic Polynomials</a> <span class='cite'>[<a href='refname.html#Xcyclotomic-polynomial'>1</a>]</span>
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-7.1 <a href='Definitions3.html#definitions3'>Definitions</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-7.1 <a href='Definitions3.html#definitions3'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-7.2 <a href='Theorems2.html#theorems2'>Theorems</a></span>
    </div>
+<!--  l. 5  --><p class='indent'>   
 
                                                                                          
                                                                                          
-   <!--  l. 409  --><div class='crosslinks'><p class='noindent'>[<a href='CyclotomicPolynomial.html'>next</a>] [<a href='Decomposition.html'>prev</a>] [<a href='Decomposition.html#tailDecomposition.html'>prev-tail</a>] [<a href='RootsofUnity.html'>front</a>] [<a href='BasicMath.html#RootsofUnity.html'>up</a>] </p></div>
+   <!--  l. 409  --></p><div class='crosslinks'><p class='noindent'>[<a href='CyclotomicPolynomial.html'>next</a>] [<a href='Decomposition.html'>prev</a>] [<a href='Decomposition.html#tailDecomposition.html'>prev-tail</a>] [<a href='RootsofUnity.html'>front</a>] [<a href='BasicMath.html#RootsofUnity.html'>up</a>] </p></div>
 <!--  l. 409  --><p class='indent'>   <a id='tailRootsofUnity.html'></a> </p> 
 </body> 
 </html>
