--- a/VectorandMatrix.html
+++ b/VectorandMatrix.html
@@ -11,8 +11,8 @@
    <!--  l. 421  --><div class='crosslinks'><p class='noindent'>[<a href='EulersFormula.html'>next</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>prev</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>prev-tail</a>] [<a href='#tailVectorandMatrix.html'>tail</a>] [<a href='BasicMath.html#VectorandMatrix.html'>up</a>] </p></div>
    <h3 class='sectionHead' id='vector-and-matrix'><span class='titlemark'>A-10   </span> <a id='x34-43000A-10'></a>Vector and Matrix</h3>
    
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic'>Vector Arithmetic</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-10.1 <a href='VectorArithmetic.html#vector-arithmetic'>Vector Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.2 <a href='VariousTypesofMatrix.html#various-types-of-matrix'>Various Types of Matrix</a></span>
 <br />   <span class='subsectionToc'>A-10.3 <a href='MatrixArithmetic.html#matrix-arithmetic'>Matrix Arithmetic</a></span>
 <br />   <span class='subsectionToc'>A-10.4 <a href='Projection.html#projection'>Projection</a></span>
@@ -30,6 +30,7 @@
 <!--  l. 60  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>ℝ</mi><mo class='MathClass-open' stretchy='false'>[</mo><mi>X</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><msup><mrow><mi>X</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn></mrow></math></a></span>
 <br />   <span class='subsectionToc'>A-10.8 <a href='TransformingBasisbetweenPolynomialRingandVectorSpace.html#transforming-basis-between-polynomial-ring-and-vector-space'>Transforming Basis between Polynomial Ring and Vector Space</a></span>
    </div>
+<!--  l. 3  --><p class='indent'>   
 
 
 
@@ -39,7 +40,7 @@
 
                                                                                          
                                                                                          
-   <!--  l. 427  --><div class='crosslinks'><p class='noindent'>[<a href='EulersFormula.html'>next</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>prev</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>prev-tail</a>] [<a href='VectorandMatrix.html'>front</a>] [<a href='BasicMath.html#VectorandMatrix.html'>up</a>] </p></div>
+   <!--  l. 427  --></p><div class='crosslinks'><p class='noindent'>[<a href='EulersFormula.html'>next</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>prev</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>prev-tail</a>] [<a href='VectorandMatrix.html'>front</a>] [<a href='BasicMath.html#VectorandMatrix.html'>up</a>] </p></div>
 <!--  l. 427  --><p class='indent'>   <a id='tailVectorandMatrix.html'></a> </p> 
 </body> 
 </html>
