--- a/EfficientPolynomialMultiplicationbyFFTandNTT.html
+++ b/EfficientPolynomialMultiplicationbyFFTandNTT.html
@@ -13,20 +13,21 @@
 <!--  l. 1  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='http://web.cecs.pdx.edu/~maier/cs584/Lectures/lect07b-11-MG.pdf'>Polynomials and the Fast Fourier Transform (FFT)</a> <span class='cite'>[<a href='refname.html#Xntt'>5</a>]</span>
    
 </p>
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-16.1 <a href='BackgroundandMotivation.html#background-and-motivation'>Background and Motivation</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-16.1 <a href='BackgroundandMotivation.html#background-and-motivation'>Background and Motivation</a></span>
 <br />   <span class='subsectionToc'>A-16.2 <a href='ForwardFFTorNTT.html#forward-fft-or-ntt'>Forward FFT (or NTT)</a></span>
 <br />   <span class='subsubsectionToc'>A-16.2.1 <a href='ForwardFFTorNTT.html#highlevel-idea'>High-level Idea</a></span>
 <br />   <span class='subsubsectionToc'>A-16.2.2 <a href='ForwardFFTorNTT.html#details'>Details</a></span>
 <br />   <span class='subsectionToc'>A-16.3 <a href='PointwiseMultiplication.html#pointwise-multiplication'>Point-wise Multiplication</a></span>
 <br />   <span class='subsectionToc'>A-16.4 <a href='InverseFFTorNTT.html#inverse-fft-or-ntt'>Inverse FFT (or NTT)</a></span>
    </div>
+<!--  l. 4  --><p class='indent'>   
 
 
 
                                                                                          
                                                                                          
-   <!--  l. 467  --><div class='crosslinks'><p class='noindent'>[<a href='LagrangesPolynomialInterpolation.html'>prev</a>] [<a href='LagrangesPolynomialInterpolation.html#tailLagrangesPolynomialInterpolation.html'>prev-tail</a>] [<a href='EfficientPolynomialMultiplicationbyFFTandNTT.html'>front</a>] [<a href='BasicMath.html#EfficientPolynomialMultiplicationbyFFTandNTT.html'>up</a>] </p></div>
+   <!--  l. 467  --></p><div class='crosslinks'><p class='noindent'>[<a href='LagrangesPolynomialInterpolation.html'>prev</a>] [<a href='LagrangesPolynomialInterpolation.html#tailLagrangesPolynomialInterpolation.html'>prev-tail</a>] [<a href='EfficientPolynomialMultiplicationbyFFTandNTT.html'>front</a>] [<a href='BasicMath.html#EfficientPolynomialMultiplicationbyFFTandNTT.html'>up</a>] </p></div>
 <!--  l. 467  --><p class='indent'>   <a id='tailEfficientPolynomialMultiplicationbyFFTandNTT.html'></a> </p> 
 </body> 
 </html>
