--- a/ModuloRescaling.html
+++ b/ModuloRescaling.html
@@ -11,12 +11,14 @@
    <!--  l. 433  --><div class='crosslinks'><p class='noindent'>[<a href='ChineseRemainderTheorem.html'>next</a>] [<a href='EulersFormula.html'>prev</a>] [<a href='EulersFormula.html#tailEulersFormula.html'>prev-tail</a>] [<a href='#tailModuloRescaling.html'>tail</a>] [<a href='BasicMath.html#ModuloRescaling.html'>up</a>] </p></div>
    <h3 class='sectionHead' id='modulo-rescaling'><span class='titlemark'>A-12   </span> <a id='x48-60000A-12'></a>Modulo Rescaling</h3>
    
-   <div class='subsectionTOCS'>
-   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations'>Rescaling Modulo of Congruence Relations</a></span>
+   <div class='subsectionTOCS hrr'>
+<br />   <span class='subsectionToc'>A-12.1 <a href='RescalingModuloofCongruenceRelations.html#rescaling-modulo-of-congruence-relations'>Rescaling Modulo of Congruence Relations</a></span>
 <br />   <span class='subsubsectionToc'>A-12.1.1 <a href='RescalingModuloofCongruenceRelations.html#example4'>Example</a></span>
    </div>
+<!--  l. 2  --><p class='indent'>   
                                                                                          
                                                                                          
+</p>
    <!--  l. 439  --><div class='crosslinks'><p class='noindent'>[<a href='ChineseRemainderTheorem.html'>next</a>] [<a href='EulersFormula.html'>prev</a>] [<a href='EulersFormula.html#tailEulersFormula.html'>prev-tail</a>] [<a href='ModuloRescaling.html'>front</a>] [<a href='BasicMath.html#ModuloRescaling.html'>up</a>] </p></div>
 <!--  l. 439  --><p class='indent'>   <a id='tailModuloRescaling.html'></a> </p> 
 </body> 
