deploy: 695cbb41bb3bafbecb5062a3bda3b44e906ef28f

--- a/Field.html
+++ b/Field.html
@@ -13,17 +13,16 @@
 <!--  l. 1  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://e.math.cornell.edu/people/belk/numbertheory/CyclotomicPolynomials.pdf'>Fields and Cyclotomic Polynomials</a> <span class='cite'>[<a href='refname.html#Xcyclotomic-polynomial'>1</a>]</span>
    
 </p>
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>A-3.1 <a href='Definitions1.html#definitions1'>Definitions</a></span>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>A-3.1 <a href='Definitions1.html#definitions1'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-3.2 <a href='Examples1.html#examples1'>Examples</a></span>
 <br />   <span class='subsectionToc'>A-3.3 <a href='Theorems.html#theorems'>Theorems</a></span>
    </div>
-<!--  l. 4  --><p class='indent'>   
 
 
                                                                                          
                                                                                          
-   <!--  l. 382  --></p><div class='crosslinks'><p class='noindent'>[<a href='Order.html'>next</a>] [<a href='Group.html'>prev</a>] [<a href='Group.html#tailGroup.html'>prev-tail</a>] [<a href='Field.html'>front</a>] [<a href='BasicMath.html#Field.html'>up</a>] </p></div>
+   <!--  l. 382  --><div class='crosslinks'><p class='noindent'>[<a href='Order.html'>next</a>] [<a href='Group.html'>prev</a>] [<a href='Group.html#tailGroup.html'>prev-tail</a>] [<a href='Field.html'>front</a>] [<a href='BasicMath.html#Field.html'>up</a>] </p></div>
 <!--  l. 382  --><p class='indent'>   <a id='tailField.html'></a> </p> 
 </body> 
 </html>
