--- a/GGSW.html
+++ b/GGSW.html
@@ -18,20 +18,19 @@ each <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/Ma
 GLev ciphertext in the GGSW ciphertext encrypts the plaintext
 <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>S</mi></mrow><mrow><mn>0</mn></mrow></msub> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>M</mi><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>S</mi></mrow><mrow><mn>1</mn></mrow></msub> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>M</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-punc' stretchy='false'>.</mo><mo class='MathClass-punc' stretchy='false'>.</mo><mo class='MathClass-punc' stretchy='false'>.</mo><mstyle class='text'><mtext> </mtext></mstyle><msub><mrow><mi>S</mi></mrow><mrow><mi>k</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msub> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>M</mi></mrow></math>, and
 <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math>. This is
-visually depicted in <a href='Encryption4.html#an-illustration-of-a-ggsw-ciphertext'>Figure 10<!--  tex4ht:ref: subsec:gleveenc   --></a>.
+visually depicted in <a href='Encryption4.html#an-illustration-of-a-ggsw-ciphertext'>Figure 10<!--  tex4ht:ref: subsec:glev-enc   --></a>.
    
 </p>
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>B-6.1 <a href='Encryption4.html#encryption4'>Encryption</a></span>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>B-6.1 <a href='Encryption4.html#encryption4'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-6.2 <a href='Decryption4.html#decryption4'>Decryption</a></span>
 <br />   <span class='subsectionToc'>B-6.3 <a href='GSWandRGSW.html#gsw-and-rgsw'>GSW and RGSW</a></span>
    </div>
-<!--  l. 4  --><p class='indent'>   
 
 
                                                                                          
                                                                                          
-   <!--  l. 537  --></p><div class='crosslinks'><p class='noindent'>[<a href='GLev.html'>prev</a>] [<a href='GLev.html#tailGLev.html'>prev-tail</a>] [<a href='GGSW.html'>front</a>] [<a href='PostquantumCryptography.html#GGSW.html'>up</a>] </p></div>
+   <!--  l. 537  --><div class='crosslinks'><p class='noindent'>[<a href='GLev.html'>prev</a>] [<a href='GLev.html#tailGLev.html'>prev-tail</a>] [<a href='GGSW.html'>front</a>] [<a href='PostquantumCryptography.html#GGSW.html'>up</a>] </p></div>
 <!--  l. 537  --><p class='indent'>   <a id='tailGGSW.html'></a> </p> 
 </body> 
 </html>
