--- a/GLWEModulusSwitching.html
+++ b/GLWEModulusSwitching.html
@@ -30,25 +30,24 @@ becoming <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Mat
 </mrow><mrow><mi>q</mi> </mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo> <mrow><mo fence='true' form='prefix'>⌈</mo><mrow><msub><mrow><mi>a</mi></mrow><mrow><mi>k</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msub><mstyle displaystyle='true'><mfrac><mrow><msup><mrow><mi>q</mi></mrow><mrow><mi>′</mi></mrow></msup>
 </mrow><mrow><mi>q</mi> </mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow><mo class='MathClass-punc' stretchy='false'>,</mo> <mrow><mo fence='true' form='prefix'>⌈</mo><mrow><mi>b</mi><mstyle displaystyle='true'><mfrac><mrow><msup><mrow><mi>q</mi></mrow><mrow><mi>′</mi></mrow></msup>
 </mrow><mrow><mi>q</mi> </mrow></mfrac></mstyle></mrow><mo fence='true' form='postfix'>⌋</mo></mrow></mrow><mo fence='true' form='postfix'>)</mo></mrow></math>. To
-switch the modulo of an LWE ciphertext, we use the modulo rescaling technique learned from <a href='ModuloRescaling.html#modulo-rescaling'><span class='ts1-lmr10-x-x-109'>§</span>A-12<!--  tex4ht:ref: sec:glwemmultpplain   --></a>. The
+switch the modulo of an LWE ciphertext, we use the modulo rescaling technique learned from <a href='ModuloRescaling.html#modulo-rescaling'><span class='ts1-lmr10-x-x-109'>§</span>A-12<!--  tex4ht:ref: sec:glwe-mult-plain   --></a>. The
 same modulus switching technique can be also applied to RLWE ciphertexts. In this section, we will
 show how to switch (i.e., rescale) the modulo of LWE and RLWE ciphertexts and prove its
 correctness.
    
 </p>
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>C-4.1 <a href='LWEModulusSwitching.html#lwe-modulus-switching'>LWE Modulus Switching</a></span>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>C-4.1 <a href='LWEModulusSwitching.html#lwe-modulus-switching'>LWE Modulus Switching</a></span>
 <br />   <span class='subsubsectionToc'>C-4.1.1 <a href='LWEModulusSwitching.html#example5'>Example</a></span>
 <br />   <span class='subsubsectionToc'>C-4.1.2 <a href='LWEModulusSwitching.html#discussion5'>Discussion</a></span>
 <br />   <span class='subsectionToc'>C-4.2 <a href='RLWEModulusSwitching.html#rlwe-modulus-switching'>RLWE Modulus Switching</a></span>
 <br />   <span class='subsectionToc'>C-4.3 <a href='GLWEModulusSwitching1.html#glwe-modulus-switching1'>GLWE Modulus Switching</a></span>
    </div>
-<!--  l. 6  --><p class='indent'>   
 
 
                                                                                          
                                                                                          
-   <!--  l. 578  --></p><div class='crosslinks'><p class='noindent'>[<a href='GLWEKeySwitching.html'>next</a>] [<a href='GLWECiphertexttoPlaintextMultiplication.html'>prev</a>] [<a href='GLWECiphertexttoPlaintextMultiplication.html#tailGLWECiphertexttoPlaintextMultiplication.html'>prev-tail</a>] [<a href='GLWEModulusSwitching.html'>front</a>] [<a href='GenericFullyHomomorphicEncryption.html#GLWEModulusSwitching.html'>up</a>] </p></div>
+   <!--  l. 578  --><div class='crosslinks'><p class='noindent'>[<a href='GLWEKeySwitching.html'>next</a>] [<a href='GLWECiphertexttoPlaintextMultiplication.html'>prev</a>] [<a href='GLWECiphertexttoPlaintextMultiplication.html#tailGLWECiphertexttoPlaintextMultiplication.html'>prev-tail</a>] [<a href='GLWEModulusSwitching.html'>front</a>] [<a href='GenericFullyHomomorphicEncryption.html#GLWEModulusSwitching.html'>up</a>] </p></div>
 <!--  l. 578  --><p class='indent'>   <a id='tailGLWEModulusSwitching.html'></a> </p> 
 </body> 
 </html>
