--- a/GLev.html
+++ b/GLev.html
@@ -21,28 +21,27 @@ is a plaintext encoded in a polynomial. Note a GLev ciphertext’s each
 GLWE ciphertext uses a different plaintext scaling factor, which is:
 <!--  l. 1  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi mathvariant='normal'>Δ</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
 </mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mi>i</mi></mrow></msup></mrow></mfrac></mstyle></mrow></math>. The
-structure of GLev ciphertext is visually depicted in <a href='Encryption3.html#an-illustration-of-a-glev-ciphertext-'>Figure 9<!--  tex4ht:ref: subsec:glweeenc   --></a>.
-</p><!--  l. 3  --><p class='indent'>   Note that <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>q</mi></mstyle> should
+structure of GLev ciphertext is visually depicted in <a href='Encryption3.html#an-illustration-of-a-glev-ciphertext-'>Figure 9<!--  tex4ht:ref: subsec:glwe-enc   --></a>.
+</p><!--  l. 3  --><p class='indent'>   Note that <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mi>β</mi> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mi>q</mi></mrow></math> should
 hold. Especially, <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math> should
 be smaller than <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>β</mi></math>,
-because if <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mstyle class='MathClass-rel' stretchy='false'>/mo&gt; <mi>β</mi></mstyle>, then the
+because if <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>p</mi> <mo class='MathClass-rel' stretchy='false'>&gt;</mo> <mi>β</mi></mrow></math>, then the
 higher bits of <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>M</mi></math> will
 overflow beyond <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>
-after computing <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
-</mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></math>.
+after computing <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow> <mi>q</mi>
+</mrow><mrow><msup><mrow><mi>β</mi></mrow><mrow><mn>1</mn></mrow></msup></mrow></mfrac></mstyle><mi>M</mi></mrow></math>.
    
-<p></p></mrow></math>
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>B-5.1 <a href='Encryption3.html#encryption3'>Encryption</a></span>
+</p>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>B-5.1 <a href='Encryption3.html#encryption3'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-5.2 <a href='Decryption3.html#decryption3'>Decryption</a></span>
 <br />   <span class='subsectionToc'>B-5.3 <a href='LevandRLev.html#lev-and-rlev'>Lev and RLev</a></span>
    </div>
-<!--  l. 5  --><p class='indent'>   
 
 
                                                                                          
                                                                                          
-   <!--  l. 530  --></p><div class='crosslinks'><p class='noindent'>[<a href='GGSW.html'>next</a>] [<a href='GLWECryptosystem.html'>prev</a>] [<a href='GLWECryptosystem.html#tailGLWECryptosystem.html'>prev-tail</a>] [<a href='GLev.html'>front</a>] [<a href='PostquantumCryptography.html#GLev.html'>up</a>] </p></div>
-<!--  l. 530  --><p class='indent'>   <a id='tailGLev.html'></a> </p></mstyle> 
-</mrow></math> 
-</p></body></html>
+   <!--  l. 530  --><div class='crosslinks'><p class='noindent'>[<a href='GGSW.html'>next</a>] [<a href='GLWECryptosystem.html'>prev</a>] [<a href='GLWECryptosystem.html#tailGLWECryptosystem.html'>prev-tail</a>] [<a href='GLev.html'>front</a>] [<a href='PostquantumCryptography.html#GLev.html'>up</a>] </p></div>
+<!--  l. 530  --><p class='indent'>   <a id='tailGLev.html'></a> </p> 
+</body> 
+</html>
