--- a/Group.html
+++ b/Group.html
@@ -11,15 +11,14 @@
    <!--  l. 369  --><div class='crosslinks'><p class='noindent'>[<a href='Field.html'>next</a>] [<a href='ModuloArithmetic.html'>prev</a>] [<a href='ModuloArithmetic.html#tailModuloArithmetic.html'>prev-tail</a>] [<a href='#tailGroup.html'>tail</a>] [<a href='BasicMath.html#Group.html'>up</a>] </p></div>
    <h3 class='sectionHead' id='group'><span class='titlemark'>A-2   </span> <a id='x8-11000A-2'></a>Group</h3>
    
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>A-2.1 <a href='Definitions.html#definitions'>Definitions</a></span>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>A-2.1 <a href='Definitions.html#definitions'>Definitions</a></span>
 <br />   <span class='subsectionToc'>A-2.2 <a href='Examples.html#examples'>Examples</a></span>
    </div>
-<!--  l. 4  --><p class='indent'>   
 
                                                                                          
                                                                                          
-   <!--  l. 376  --></p><div class='crosslinks'><p class='noindent'>[<a href='Field.html'>next</a>] [<a href='ModuloArithmetic.html'>prev</a>] [<a href='ModuloArithmetic.html#tailModuloArithmetic.html'>prev-tail</a>] [<a href='Group.html'>front</a>] [<a href='BasicMath.html#Group.html'>up</a>] </p></div>
+   <!--  l. 376  --><div class='crosslinks'><p class='noindent'>[<a href='Field.html'>next</a>] [<a href='ModuloArithmetic.html'>prev</a>] [<a href='ModuloArithmetic.html#tailModuloArithmetic.html'>prev-tail</a>] [<a href='Group.html'>front</a>] [<a href='BasicMath.html#Group.html'>up</a>] </p></div>
 <!--  l. 376  --><p class='indent'>   <a id='tailGroup.html'></a> </p> 
 </body> 
 </html>
