--- a/RLWECryptosystem1.html
+++ b/RLWECryptosystem1.html
@@ -37,17 +37,16 @@ polynomial degree of <!--  l. 3  --><math display='inline' xmlns='http://www.w3.
 simplicity, we denote <!--  l. 3  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mstyle mathvariant='script'><mi>R</mi></mstyle></mrow><mrow><mo class='MathClass-open' stretchy='false'>⟨</mo><mi>n</mi><mo class='MathClass-punc' stretchy='false'>,</mo><mi>q</mi><mo class='MathClass-close' stretchy='false'>⟩</mo></mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <msub><mrow><mi>ℤ</mi></mrow><mrow><mi>q</mi></mrow></msub><mo class='MathClass-open' stretchy='false'>[</mo><mi>x</mi><mo class='MathClass-close' stretchy='false'>]</mo><mo class='MathClass-bin' stretchy='false'>∕</mo><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>x</mi></mrow><mrow><mi>n</mi></mrow></msup> <mo class='MathClass-bin' stretchy='false'>+</mo> <mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>.
    
 </p>
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>B-3.1 <a href='Setup1.html#setup1'>Setup</a></span>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>B-3.1 <a href='Setup1.html#setup1'>Setup</a></span>
 <br />   <span class='subsectionToc'>B-3.2 <a href='Encryption1.html#encryption1'>Encryption</a></span>
 <br />   <span class='subsectionToc'>B-3.3 <a href='Decryption1.html#decryption1'>Decryption</a></span>
    </div>
-<!--  l. 5  --><p class='indent'>   
 
 
                                                                                          
                                                                                          
-   <!--  l. 518  --></p><div class='crosslinks'><p class='noindent'>[<a href='GLWECryptosystem.html'>next</a>] [<a href='LWECryptosystem1.html'>prev</a>] [<a href='LWECryptosystem1.html#tailLWECryptosystem1.html'>prev-tail</a>] [<a href='RLWECryptosystem1.html'>front</a>] [<a href='PostquantumCryptography.html#RLWECryptosystem1.html'>up</a>] </p></div>
+   <!--  l. 518  --><div class='crosslinks'><p class='noindent'>[<a href='GLWECryptosystem.html'>next</a>] [<a href='LWECryptosystem1.html'>prev</a>] [<a href='LWECryptosystem1.html#tailLWECryptosystem1.html'>prev-tail</a>] [<a href='RLWECryptosystem1.html'>front</a>] [<a href='PostquantumCryptography.html#RLWECryptosystem1.html'>up</a>] </p></div>
 <!--  l. 518  --><p class='indent'>   <a id='tailRLWECryptosystem1.html'></a> </p> 
 </body> 
 </html>
