--- a/PolynomialRing.html
+++ b/PolynomialRing.html
@@ -14,18 +14,17 @@
 </p><!--  l. 4  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference 2:  </span><a href='https://math.libretexts.org/Bookshelves/Combinatorics_and_Discrete_Mathematics/Applied_Discrete_Structures_(Doerr_and_Levasseur)/16%3A_An_Introduction_to_Rings_and_Fields/16.03%3A_Polynomial_Rings'>Polynomial Rings (LibreTexts)</a> <span class='cite'>[<a href='refname.html#Xpolynomial-rings'>3</a>]</span>
    
 </p>
-   <div class='subsectionTOCS hrr'>
-<br />   <span class='subsectionToc'>A-5.1 <a href='Overview1.html#overview1'>Overview</a></span>
+   <div class='subsectionTOCS'>
+   <span class='subsectionToc'>A-5.1 <a href='Overview1.html#overview1'>Overview</a></span>
 <br />   <span class='subsubsectionToc'>A-5.1.1 <a href='Overview1.html#example'>Example</a></span>
 <br />   <span class='subsubsectionToc'>A-5.1.2 <a href='Overview1.html#discussion'>Discussion</a></span>
 <br />   <span class='subsectionToc'>A-5.2 <a href='CoefficientRotation.html#coefficient-rotation'>Coefficient Rotation</a></span>
 <br />   <span class='subsubsectionToc'>A-5.2.1 <a href='CoefficientRotation.html#example1'>Example</a></span>
    </div>
-<!--  l. 7  --><p class='indent'>   
 
                                                                                          
                                                                                          
-   <!--  l. 396  --></p><div class='crosslinks'><p class='noindent'>[<a href='Decomposition.html'>next</a>] [<a href='Order.html'>prev</a>] [<a href='Order.html#tailOrder.html'>prev-tail</a>] [<a href='PolynomialRing.html'>front</a>] [<a href='BasicMath.html#PolynomialRing.html'>up</a>] </p></div>
+   <!--  l. 396  --><div class='crosslinks'><p class='noindent'>[<a href='Decomposition.html'>next</a>] [<a href='Order.html'>prev</a>] [<a href='Order.html#tailOrder.html'>prev-tail</a>] [<a href='PolynomialRing.html'>front</a>] [<a href='BasicMath.html#PolynomialRing.html'>up</a>] </p></div>
 <!--  l. 396  --><p class='indent'>   <a id='tailPolynomialRing.html'></a> </p> 
 </body> 
 </html>
