--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@ for Fully Homomorphic Encryption</h2>
    <div class='tableofcontents'>
    <span class='likesectionToc'><a href='Preface.html#preface' id='QQ2-2-1'>Preface</a></span>
 <br />   <span class='likesectionToc'><a href='contentsname.html#contents' id='QQ2-3-3'>Contents</a></span>
-<br />   <span class='sectionToc'>1 <a href='Decomposition.html#decomposition' id='QQ2-4-4'>Decomposition</a></span>
-<br />   <span class='subsectionToc'>1.1 <a href='NumberDecomposition.html#number-decomposition' id='QQ2-5-5'>Number Decomposition</a></span>
-<br />   <span class='subsectionToc'>1.2 <a href='PolynomialDecomposition.html#polynomial-decomposition' id='QQ2-6-8'>Polynomial Decomposition</a></span>
-<br />   <span class='subsectionToc'>1.3 <a href='ApproximateDecomposition.html#approximate-decomposition' id='QQ2-7-11'>Approximate Decomposition</a></span>
-<br />   <span class='subsectionToc'>1.4 <a href='GadgetDecomposition.html#gadget-decomposition' id='QQ2-8-13'>Gadget Decomposition</a></span>
+<br />   <span class='sectionToc'>1 <a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html#roots-of-unity-and-cyclotomic-polynomial-over-integer-ring' id='QQ2-4-4'>Roots of Unity and Cyclotomic Polynomial over Integer Ring</a></span>
+<br />   <span class='subsectionToc'>1.1 <a href='VandermondeMatrixwithRootsofaCyclotomicPolynomial.html#vandermonde-matrix-with-roots-of-a-cyclotomic-polynomial' id='QQ2-5-6'>Vandermonde Matrix with Roots of a Cyclotomic Polynomial</a></span>
    </div>
 
 <p></p> 
